...
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/todologo" />

    <EditText
        android:id="@+id/todoEditBox"
        android:layout_width="326dp"
        android:layout_height="228dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="125dp"
        android:ems="10"
        android:gravity="top"
        android:hint="Add Todo Text Here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addToList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/addToList"
        android:layout_width="wrap_content"
...
